Fixing aligned left and right images on smaller screens

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -2061,6 +2061,11 @@ object {
     width: 20em;
   }
 }
+@media screen and (max-width: 60em) {
+  img.alignleft, img.alignright {
+    width: 100%;
+  }
+}
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
