--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -21,6 +21,12 @@ object {
     }
 }
 
+@media screen and (max-width: 60em) {
+    img.alignleft, img.alignright {
+        width: 100%;
+    } 
+}
+
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
