--- a/style-human.css
+++ b/style-human.css
@@ -2055,6 +2055,11 @@ object {
     width: 20em;
   }
 }
+@media screen and (max-width: 60em) {
+  img.alignleft, img.alignright {
+    width: 100%;
+  }
+}
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
